syntax = "proto3";

// 依照 https://cloud.google.com/apis/design/naming_convention 規範
package softleader.captainkube.v2;

// Specifies Java package name, using the standard prefix "tw.com."
option java_package = "tw.com.softleader.captainkube.v2";
option go_package = "captainkube.v2";

import "chart.proto";
import "image.proto";

message RmcRequest {
    Chart chart = 1;
    ReTag retag = 2;
    repeated string set = 3;
    string constraint = 4;
    bool verbose = 5;
    int64 timeout = 6;
    bool color = 7;
    bool force = 8;
    bool dryRun = 9;
}