syntax = "proto3";

// 依照 https://cloud.google.com/apis/design/naming_convention 規範
package softleader.captainkube.v2;

// Specifies Java package name, using the standard prefix "tw.com."
option java_package = "tw.com.softleader.captainkube.v2";
option go_package = "captainkube.v2";

import "image.proto";

message RmiRequest {
    repeated Image images = 1;
    bool verbose = 3;
    int64 timeout = 4;
    bool color = 5;
    bool force = 6;
    bool dryRun = 7;
}